# ContextClaw

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  studio-release.yml
catalog/connectors/contextgraph-mcp/: connector.yaml
catalog/connectors/filesystem/: connector.yaml
catalog/connectors/github/: connector.yaml
catalog/connectors/notion/: connector.yaml
catalog/connectors/playwright/: connector.yaml
catalog/connectors/shell/: connector.yaml
catalog/connectors/slack/: connector.yaml
catalog/connectors/web/: connector.yaml
catalog/skills/code-review/: SKILL.md  skill.yaml
catalog/skills/coding/: SKILL.md  skill.yaml
catalog/skills/docs-writer/: SKILL.md  skill.yaml
catalog/skills/github-maintainer/: SKILL.md  skill.yaml
catalog/skills/launch-marketing/: SKILL.md  skill.yaml
catalog/skills/memory-governor/: SKILL.md  skill.yaml
catalog/skills/notion-knowledge-base/: SKILL.md  skill.yaml
catalog/skills/playwright-debugger/: SKILL.md  skill.yaml
catalog/skills/qa-triage/: SKILL.md  skill.yaml
contextclaw/: __init__.py  catalog_engine.py  catalog_mcp_server.py  cli.py  context_engine.py  logging_config.py  memory_files.py  project.py  runner.py  runtime.py  simple_yaml.py  workflow.py
contextclaw/chat/: server.py  session.py
contextclaw/config/: __init__.py  agent_config.py  skills.py  soul.py
contextclaw/connectors/: __init__.py  github.py  playwright.py  runtime.py
contextclaw/knowledge/: __init__.py  bridge.py
contextclaw/providers/: __init__.py  claude.py  ollama.py  openai.py  protocol.py
contextclaw/sandbox/: __init__.py  docker.py  policy.py  process.py  protocol.py
contextclaw/studio/: __init__.py  daemon.py  journal.py  knowledge.py  service.py  sidecar.py
contextclaw/tools/: bundles.json  bundles.py  manager.py  mcp.py
examples/coding_agent/: SOUL.md  config.yaml
examples/research_agent/: SOUL.md  config.yaml
policies/: default.yaml
scripts/: build_studio_sidecar.py  studio_sidecar_entry.py  verify_studio_sidecar.py
studio-ui/: README.md  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
studio-ui/scripts/: build-sidecar.mjs  tauri-frontend-build.mjs  tauri-frontend-dev.mjs
studio-ui/src/: App.jsx  App.test.jsx  styles.css
studio-ui/src-tauri/: Cargo.toml  tauri.conf.json
studio-ui/src-tauri/src/: lib.rs  main.rs
tests/: test_catalog.py  test_cli.py  test_config.py  test_context_engine.py  test_integration.py  test_knowledge_bridge.py  test_mcp.py  test_memory_files.py  test_packaging.py  test_project.py  test_providers.py  test_runner.py  test_sandbox.py  test_server.py  test_studio.py  test_studio_sidecar.py  test_tools.py  test_workflow.py
(+5 files in other folders)
