[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contextclaw"
version = "0.1.0"
description = "ContextClaw — Knowledge-aware agent orchestrator powered by ContextGraph"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
knowledge = ["contextgraph-sdk"]
claude = ["anthropic"]
openai = ["openai"]
docker = ["docker"]
studio = ["fastapi", "uvicorn"]
desktop-build = ["pyinstaller"]
all = ["contextclaw[knowledge,claude,openai,docker,studio]"]

[project.scripts]
cclaw = "contextclaw.cli:main"
cclaw-studio = "contextclaw.studio.daemon:main"

[tool.hatch.build.targets.wheel]
packages = ["contextclaw"]

[tool.hatch.build.targets.wheel.force-include]
"catalog" = "catalog"
"studio-ui/dist" = "contextclaw/studio/_frontend"

[tool.hatch.build.targets.sdist]
include = ["contextclaw", "catalog", "studio-ui/dist", "README.md", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
required-version = "==0.15.6"
